# Stem-Agent-Framework

./: .env.example  .gitignore  README.md  pyproject.toml
demos/: demo_agent.py  evaluation_demo.py  graph_e2e_demo.py  orchestrator_cli.py  restaurant_ops_demo.py  tp3_environment_probe_demo.py
domains/: code_review.yaml  restaurant_ops.yaml  security_audit.yaml  template.yaml
scripts/: seed_restaurant_db.py
stem_agent/: __init__.py
stem_agent/core/: __init__.py  benchmark.py  config.py  evaluator.py  graph.py  orchestrator.py  skill_store.py  state.py
stem_agent/tools/: __init__.py  composer.py  primitives.py  registry.py  validator.py
tests/unit/: test_composer.py  test_graph_smoke.py  test_primitives.py  test_probe.py  test_registry.py  test_state.py
