[project]
name = "stem-agent"
version = "0.1.0"
description = "A self-specializing AI agent framework inspired by biological stem cells"
requires-python = ">=3.11"
dependencies = [
    # Agent framework
    "langgraph>=1.1.0",
    "langchain-core>=1.2.0",
    # LLM providers
    "langchain-openai>=0.3.0",
    "openai>=1.0.0",
    # Search
    "google-search-results>=2.4.0",  # SerpAPI
    # Memory
    "chromadb>=0.5.0",
    # State & config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    # Experiment tracking
    "mlflow>=2.10.0",
    # Utilities
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
